[gd_scene load_steps=2 format=2]

[ext_resource path="res://SettingsEditScreen.gd" type="Script" id=1]

[node name="Control" type="Control"]
margin_right = 320.0
margin_bottom = 156.0
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_right = 320.0
margin_bottom = 202.0

[node name="SWTitleLabel" type="Label" parent="VBC"]
margin_right = 317.0
margin_bottom = 14.0
text = "Storyworld title:"

[node name="TitleEdit" type="LineEdit" parent="VBC"]
margin_top = 18.0
margin_right = 317.0
margin_bottom = 42.0
rect_min_size = Vector2( 160, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="SWAuthorLabel" type="Label" parent="VBC"]
margin_top = 46.0
margin_right = 317.0
margin_bottom = 60.0
text = "Storyworld author:"

[node name="AuthorEdit" type="LineEdit" parent="VBC"]
margin_top = 64.0
margin_right = 317.0
margin_bottom = 88.0
rect_min_size = Vector2( 160, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="HSeparator" type="HSeparator" parent="VBC"]
margin_top = 92.0
margin_right = 317.0
margin_bottom = 96.0

[node name="SavePathDisplay" type="Label" parent="VBC"]
margin_top = 100.0
margin_right = 317.0
margin_bottom = 114.0
autowrap = true

[node name="HBC1" type="HBoxContainer" parent="VBC"]
visible = false
margin_top = 118.0
margin_right = 317.0
margin_bottom = 138.0

[node name="IFIDDisplay" type="Label" parent="VBC/HBC1"]
margin_top = 3.0
margin_bottom = 17.0

[node name="IFIDResetButton" type="Button" parent="VBC/HBC1"]
margin_left = 4.0
margin_right = 118.0
margin_bottom = 20.0
text = "Create new IFID"

[node name="HBC2" type="HBoxContainer" parent="VBC"]
margin_top = 118.0
margin_right = 317.0
margin_bottom = 158.0

[node name="DBMLabel" type="Label" parent="VBC/HBC2"]
margin_top = 13.0
margin_right = 199.0
margin_bottom = 27.0
text = "Set Storyworld to Debug Mode?"

[node name="DBMSwitch" type="CheckButton" parent="VBC/HBC2"]
margin_left = 203.0
margin_right = 279.0
margin_bottom = 40.0

[node name="HBC3" type="HBoxContainer" parent="VBC"]
margin_top = 162.0
margin_right = 317.0
margin_bottom = 202.0

[node name="DisplayModeLabel" type="Label" parent="VBC/HBC3"]
margin_top = 13.0
margin_right = 151.0
margin_bottom = 27.0
text = "Use new display mode?"

[node name="DisplayModeSwitch" type="CheckButton" parent="VBC/HBC3"]
margin_left = 155.0
margin_right = 231.0
margin_bottom = 40.0
pressed = true

[node name="ConfirmIFIDReset" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "Are you sure?"
dialog_text = "Are you sure you want to reset the IFID for your storyworld?"
dialog_autowrap = true

[connection signal="text_changed" from="VBC/TitleEdit" to="." method="_on_TitleEdit_text_changed"]
[connection signal="text_changed" from="VBC/AuthorEdit" to="." method="_on_AuthorEdit_text_changed"]
[connection signal="pressed" from="VBC/HBC1/IFIDResetButton" to="." method="_on_IFIDResetButton_pressed"]
[connection signal="toggled" from="VBC/HBC2/DBMSwitch" to="." method="_on_DBMSwitch_toggled"]
[connection signal="toggled" from="VBC/HBC3/DisplayModeSwitch" to="." method="_on_DisplayModeSwitch_toggled"]
[connection signal="confirmed" from="ConfirmIFIDReset" to="." method="_on_ConfirmIFIDReset_confirmed"]
